# bluetooth-scanner

./: .gitignore  README.md  package-lock.json  package.json
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api_server.rs  bluetooth.rs  commands.rs  lib.rs  location.rs  main.rs  models.rs  store.rs
src/main/: apiServer.js  main.js  preload.js
src/renderer/: app.js  index.html  styles.css  tauri-bridge.js
