[package]
name = "bluetooth-scanner"
version = "1.0.0"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "bluetooth_scanner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-plugin-log = { version = "2", features = ["colored"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
btleplug = "0.11"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
uuid = { version = "1", features = ["v4"] }
log = "0.4"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
lazy_static = "1.4"
rusqlite = { version = "0.31", features = ["bundled"] }
